Tue May 14 09:15:39 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (blk_orphan): the wrong condition; backported from 1.7

Tue May 14 03:07:35 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_clear_cache_by_class): new function.

	* eval.c (set_method_visibility): should have clear cache forq
	  updated visibility.

Fri May 10 19:00:47 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* parse.y (here_document): preserve line number begins here
	  document.

Tue May  7 15:24:32 2002  Minero Aoki  <aamine@loveruby.net>

	* eval.c (rb_yield_0): The destination of the goto jump was wrong.

Tue May  7 09:21:12 2002  Minero Aoki  <aamine@loveruby.net>

	* eval.c (superclass): undesirable "unexpected return" when the
	  superclass is not a Class.

Sat May  4 20:55:10 2002  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c, gc.c, intern.h, variable.c: declare rb_gc_mark{,maybe}()
	  canonically in order not to confuse C++ compilers. (backported
	  from 1.7, problem noted by ttate)

Thu May  2 23:42:40 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_s_quote): # also should be quoted.

Thu May  2 18:27:13 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/extmk.rb.in, lib/mkmf.rb: use 'do...end' instead of '{}' for
	  Borland make.

Mon Apr 29 18:46:42 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* file.c (rb_find_file): load must be done from an abolute path if
	  $SAFE >= 4.

Sun Apr 28 17:01:56 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* win32/win32.c (insert): fix prototype for ANSI C.

Fri Apr 26 13:41:00 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* re.c (rb_reg_s_quote): quote whitespaces for /x cases.

Wed Apr 24 14:21:41 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* configure.in: set size of the initial stack from
	  2MB to 32MB on MinGW/Cygwin.

	* util.c (push_element): avoid warning for djgpp.

Wed Apr 24 01:16:14 2002  Nobuyoshi Nakada  <nobu@ruby-lang.org>
