@@ -1,4 +1,4 @@
 #define RUBY_VERSION "1.6.7"
-#define RUBY_RELEASE_DATE "2002-05-10"
+#define RUBY_RELEASE_DATE "2002-05-14"
 #define RUBY_VERSION_CODE 167
-#define RUBY_RELEASE_CODE 20020510
+#define RUBY_RELEASE_CODE 20020514
